--- a/Game Engine/Game Engine.vcxproj
+++ b/Game Engine/Game Engine.vcxproj
@@ -107,6 +107,7 @@
     <ClInclude Include="Components\Transform.h" />
     <ClInclude Include="Components\UpDown.h" />
     <ClInclude Include="FrameRateController.h" />
+    <ClInclude Include="GameObjectFactory.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="MathLibraries\LineSegment2D.h" />
     <ClInclude Include="MathLibraries\Math2D.h" />
