--- a/Game Engine/Game Engine.vcxproj
+++ b/Game Engine/Game Engine.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="MathLibraries\Vector2D.c" />
     <ClCompile Include="PhysicsManager.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="Shapes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CollisionManager.h" />
@@ -126,6 +127,7 @@
     <ClInclude Include="MathLibraries\Vector2D.h" />
     <ClInclude Include="PhysicsManager.h" />
     <ClInclude Include="ResourceManager.h" />
+    <ClInclude Include="Shapes.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\Volt.bmp" />
