--- a/Game Engine/Game Engine.vcxproj
+++ b/Game Engine/Game Engine.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="MathLibraries\Math2D.c" />
     <ClCompile Include="MathLibraries\Matrix2D.cpp" />
     <ClCompile Include="MathLibraries\Vector2D.c" />
+    <ClCompile Include="Message.cpp" />
     <ClCompile Include="PhysicsManager.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Shapes.cpp" />
@@ -131,6 +132,7 @@
     <ClInclude Include="MathLibraries\Math2D.h" />
     <ClInclude Include="MathLibraries\Matrix2D.h" />
     <ClInclude Include="MathLibraries\Vector2D.h" />
+    <ClInclude Include="Message.h" />
     <ClInclude Include="PhysicsManager.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Shapes.h" />
